# workflomics-benchmarker

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build.yml
src/benchmarker/: cwltool_runner.py  cwltool_runtime_benchmark.py  cwltool_wrapper.py  workflomics.py
src/workflomics_benchmarker/: benchmark_utils.py  cwl_utils.py  cwltool_runner.py  cwltool_runtime_benchmark.py  cwltool_wrapper.py  scientific_benchmarks.py  to_implement.py  workflomics.py
tests/: test_benchmarker.py  test_workflomics.py
tests/data/: benchmarks.json  workflow.cwl  workflow_fail.cwl  workflow_fail2.cwl
tests/data/workflow.cwl_output/: output_proteinprophet.prot.xml
