[tool.poetry]
name = "workflomics-benchmarker"
version = "0.1.0"
description = "Library used to execute workflows (in CWL) and benchmark them as part of the Workflomics ecosystem."
authors = ["Nauman Ahmed <n.ahmed@esciencecenter.nl",
            "Peter Kok <p.kok@esciencecenter.nl>",
            "Vedran Kasalica <v.kaslica@esciencecenter.nl>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
cwltool= "^3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.3"
pytest-datadir = "^1.5.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
workflomics-run = "workflomics-benchmarker.cli:run"
workflomics-benchmark = "workflomics-benchmarker.cli:benchmark"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
